--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div id="map"></div>
-    <div id="info"><h1>Map of Los Angeles Neighborhood Councils</h1><p>Made by Vectoria, the maptime bear</p></div>
+    <div id="info"><h1>Map of Los Angeles Neighborhood Councils</h1><p>... and their nearest pizzas. Click a dot for pizza.</p></div>
 	<script>
   L.mapbox.accessToken = 'pk.eyJ1IjoiY3J1emluNzN2dyIsImEiOiI3RDdhUi1NIn0.jaEqREZw7QQMRafKPNBdmA';
    var map = L.map('map')
